- added render for html editing of degree's degree info in coordinator portal - added relation between execution year and degree info - assured existence of unique degree info per execution year - fixed public degree pages to allow view of historical degree infos - removed unused services